adicionados parametros a run_in_executor y multiples parametros usando map en concurrent.futures

--- a/Python/Hilos_Procesos_Asincronismo/Hilos_Procesos_Asincronismo.ipynb
+++ b/Python/Hilos_Procesos_Asincronismo/Hilos_Procesos_Asincronismo.ipynb
@@ -75,16 +75,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generar_instancia(tipo_tarea=None, funcion_a_procesar=None, **parametros):\n",
+    "def generar_instancia(tipo_tarea=None, funcion_a_procesar=None, **kw):\n",
     "    \n",
     "    # convierte los argumentos a tupla ya que los argumentos deben ser de tipo tupla\n",
-    "    argumentos = tuple(parametros.values())\n",
+    "    argumentos = tuple(kw.values())\n",
     "    \n",
     "    # crea la instancia\n",
     "    tipo_ejecucion = tipo_instancia.get(tipo_tarea, Thread)\n",
     "    \n",
     "    # retorna la instancia con los argumentos a evaluar\n",
-    "    return tipo_ejecucion(name='test_ejecucion' ,target=funcion_a_procesar,args=argumentos)\n",
+    "    return tipo_ejecucion(name='test_ejecucion', target=funcion_a_procesar, args=argumentos)\n",
     "\n",
     "\n",
     "def iniciar_y_finalizar_instancia(instancia):\n",
@@ -277,7 +277,7 @@
    "id": "d65b0999-b5f0-48f2-9830-53900b9a451c",
    "metadata": {},
    "source": [
-    "# <center> MULTI HILOS</center>"
+    "# <center> PROCESAMIENTO MASIVO</center>"
    ]
   },
   {
@@ -328,34 +328,33 @@
     "def imprimir_multi_datos(lista):\n",
     "    \n",
     "    for valores in lista:\n",
-    "        print(valores)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "fff79e6a-b4dc-43a9-bbb0-04793b7f9843",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generar_pool_iniciar_y_finalizar_multi_instancia(tipo_tarea=None, funcion_a_procesar=None, **parametros):\n",
+    "        print(valores)\n",
+    "        \n",
+    "def generar_pool_iniciar_y_finalizar_multi_instancia(tipo_tarea=None, funcion_a_procesar=None, numero = 22):\n",
     "    \n",
-    "    argumentos = tuple(parametros.values())\n",
-    "    \n",
+    "    # crea la instancia de ejecucion\n",
     "    tipo_ejecucion = tipo_instancia.get(tipo_tarea, ThreadPoolExecutor)\n",
     "    \n",
     "    # asigna los workers basado en el total de CPUs de la maquina\n",
     "    pool = tipo_ejecucion(max_workers=nucleos_totales)\n",
     "    \n",
-    "    response = pool.submit(funcion_a_procesar)\n",
+    "    response = pool.submit(funcion_a_procesar, numero)\n",
     "    \n",
     "    # obtiene la respuesta de la tarea\n",
     "    return response.result()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "40a1c3fa-4771-4e0a-9eea-783ad8b8a8f1",
+   "metadata": {},
+   "source": [
+    "# <center> MULTI HILOS</center>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "14b92e9c-f450-42cd-a57d-6a9987a517b5",
    "metadata": {},
    "outputs": [
@@ -363,20 +362,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-85, -80, -54, -40, -20, -58, -53, -45, -20, 43, 8, -100, -47, 44, -95, -54, -2, -50, 177, 27, 311, -71]\n",
-      "[-27, -83, -60, -27, -28, 3, -84, -82, -66, -21, -63, 0, -33, 101, 64, -36, 187, 184, 278, 246, -3, 182]\n",
-      "[-67, -58, 0, -91, -70, -58, -41, -24, 32, -26, 60, -83, -91, 120, 3, 1, 195, -6, -66, 91, 390, 103]\n",
-      "[-49, -68, -92, -40, -31, -73, -64, -34, -11, -32, -3, 40, -72, 24, 132, -59, 24, 20, 270, 223, 381, -31]\n",
-      "[-37, -9, -64, -34, 12, 25, -33, 45, 27, 6, -76, -22, 25, 83, -77, -77, -61, 289, 245, -32, 97, -60]\n"
+      "[-97]\n",
+      "[-42, -70]\n",
+      "[-67, -35, -6]\n",
+      "[-44, 1, -29, -24]\n",
+      "[-55, -38, -88, -60, -28]\n"
      ]
     }
    ],
    "source": [
     "listado = []\n",
     "for i in range(5):\n",
-    "    instancia = generar_pool_iniciar_y_finalizar_multi_instancia(tipo_tarea='multihilos', funcion_a_procesar=generar_lista)\n",
-    "    type(instancia)\n",
-    "    \n",
+    "    instancia = generar_pool_iniciar_y_finalizar_multi_instancia(tipo_tarea='multihilos', funcion_a_procesar=generar_lista, numero= i + 1)\n",
+    "    # almacena las tareas ejecutadas\n",
     "    listado.append(instancia)\n",
     "\n",
     "imprimir_multi_datos(listado)"
@@ -392,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "4120fd0e-cbf1-493f-b890-bf58180555c1",
    "metadata": {},
    "outputs": [
@@ -400,20 +398,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-22, -32, -54, -46, -67, -62, -44, -79, -17, -23, 0, 114, 129, 98, -73, 37, -80, 262, 253, 339, -43, 16]\n",
-      "[-44, -66, -72, -88, -92, -11, -44, -56, 62, -47, -85, -85, -27, 144, 38, 68, 91, 105, 311, 196, 86, 390]\n",
-      "[-71, -15, -63, -47, -4, -45, 9, -45, -62, -91, 33, 24, 87, 41, 11, 49, -55, -26, 312, -77, 1, 62]\n",
-      "[-93, -52, -77, -9, -32, 12, -1, 35, 6, -39, 53, 46, -96, -51, 122, 120, 202, 38, 246, 2, 262, 152]\n",
-      "[-93, -22, -97, -28, 0, 2, -98, -37, -16, 36, -14, 45, 101, -99, -99, 65, -27, 121, 146, -3, -26, 142]\n"
+      "[-70]\n",
+      "[-1, -88]\n",
+      "[-17, -32, -5]\n",
+      "[-96, -24, -63, -29]\n",
+      "[-66, -75, -49, -49, -43]\n"
      ]
     }
    ],
    "source": [
     "listado = []\n",
     "for i in range(5):\n",
-    "    instancia = generar_pool_iniciar_y_finalizar_multi_instancia(tipo_tarea='multiprocesos', funcion_a_procesar=generar_lista)\n",
-    "    type(instancia)\n",
-    "    \n",
+    "    instancia = generar_pool_iniciar_y_finalizar_multi_instancia(tipo_tarea='multiprocesos', funcion_a_procesar=generar_lista, numero= i + 1)\n",
+    "    # almacena las tareas ejecutadas\n",
     "    listado.append(instancia)\n",
     "\n",
     "imprimir_multi_datos(listado)"
@@ -421,10 +418,61 @@
   },
   {
    "cell_type": "markdown",
+   "id": "765755ca-a718-4777-b4f9-e12575d142c9",
+   "metadata": {},
+   "source": [
+    "# <center> MULTI HILOS Y MULTIPROCESOS CON MULTIPLES ARGUMENTOS USANDO **MAP**</center>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d6fa735a-7bf9-4d3e-be18-0f130545ce65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16]\n",
+      "[25, 36, 49, 64, 81]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cuadrado(x=9):\n",
+    "    \n",
+    "    return x**2\n",
+    "\n",
+    "def multi_argumentos(*parametros, tipo_tarea=None, funcion_a_procesar=None):\n",
+    "    \n",
+    "    # convierte los parametros tipo tupla a lista\n",
+    "    argumentos = list(parametros[0])\n",
+    "    \n",
+    "    # crea la instancia de ejecucion\n",
+    "    tipo_ejecucion = tipo_instancia.get(tipo_tarea, ThreadPoolExecutor)\n",
+    "    \n",
+    "    # asigna los workers basado en el total de CPUs de la maquina\n",
+    "    pool = ThreadPoolExecutor()\n",
+    "        \n",
+    "    response = pool.map(cuadrado, argumentos)\n",
+    "        \n",
+    "    # obtiene la respuesta de la tarea\n",
+    "    return [valor for valor in response]\n",
+    "\n",
+    "print(multi_argumentos([1,2,3,4],tipo_tarea='multihilos', funcion_a_procesar=cuadrado))\n",
+    "print(multi_argumentos([5,6,7,8,9],tipo_tarea='multiprocesos', funcion_a_procesar=cuadrado))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "de2dbf4d-733c-462b-83e6-9870517b41c8",
    "metadata": {},
    "source": [
-    "# <center> ASINCRONISMO - ASYNCIO</center>"
+    "# <center> ASINCRONISMO - ASYNCIO</center>\n",
+    "<p align=\"center\" width=\"100%\">\n",
+    "    <img width=\"100%\" src=\"event-loop.png\">\n",
+    "</p>"
    ]
   },
   {
@@ -446,7 +494,7 @@
    "id": "b6df6ed0-21fa-4168-afbc-5c6f3a5d7117",
    "metadata": {},
    "source": [
-    "# <center> TODA FUNCION ASYNCRONA DEBE SER PRECEDIDA POR LA PALABRA **ASYNC**</center>"
+    "# <center> TODA FUNCION ASINCRONA DEBE SER PRECEDIDA POR LA PALABRA **ASYNC**</center>"
    ]
   },
   {
@@ -500,7 +548,7 @@
     {
      "data": {
       "text/plain": [
-       "<coroutine object listado at 0x7f0a1c5bc430>"
+       "<coroutine object listado at 0x7fe42a704350>"
       ]
      },
      "execution_count": 18,
@@ -521,7 +569,7 @@
     {
      "data": {
       "text/plain": [
-       "<coroutine object listado at 0x7f0a1c5bca50>"
+       "<coroutine object listado at 0x7fe42a7049e0>"
       ]
      },
      "execution_count": 19,
@@ -543,7 +591,7 @@
     {
      "data": {
       "text/plain": [
-       "[-64, 57, -66, -23, -51, 53, -21, -35, 1, -33]"
+       "[-68, -24, 32, -54, -84, 61, 41, 73, 65, 21]"
       ]
      },
      "execution_count": 20,
@@ -564,7 +612,7 @@
     {
      "data": {
       "text/plain": [
-       "[93, 28, 72, 28, 36, -49, 27, 76, -68, -40]"
+       "[-59, -12, 77, 1, -32, 1, -39, 65, -28, 78]"
       ]
      },
      "execution_count": 21,
@@ -585,7 +633,7 @@
     {
      "data": {
       "text/plain": [
-       "[-68, 70, 73, -41, -11, -48, 68, -47, 90, -49, 69, -48, 56, 12, 93]"
+       "[-52, 49, 53, -74, 9, 87, 73, 36, 71, -25, -16, -63, 80, -75, 98]"
       ]
      },
      "execution_count": 22,
@@ -607,7 +655,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[55, 75, -88, 44, -7, -20, 83, 55, -86, 84, 46, -100, -14, -48, -47, 21, 55, -32, 41, -72]\n"
+      "[-16, 26, 72, -22, 42, 59, 24, 4, -30, -93, -12, 12, -98, 67, -3, -90, 37, -27, -4, 19]\n"
      ]
     }
    ],
@@ -624,16 +672,16 @@
     {
      "data": {
       "text/plain": [
-       "[[-74, -82, -6, 13, 64, 72, 98, -64, -94, -38],\n",
-       " [44, 45, 74, -94, 26, -5, -61, -92, -11, 22],\n",
-       " [-27, 19, -86, -99, 21, -95, 43, -93, 39, 43],\n",
-       " [-41, -72, 47, 5, 9, 91, -69, 55, 66, 58],\n",
-       " [59, 59, 58, 30, -52, -49, -43, 45, -8, 97],\n",
-       " [40, 87, -95, -11, -84, -50, -72, -42, 80, 35],\n",
-       " [-26, -38, -44, 63, -78, -76, -21, 21, -42, -42],\n",
-       " [69, 50, 30, -96, 61, -36, 84, 39, -37, 50],\n",
-       " [90, -25, -19, 39, -33, -39, 77, -22, -93, 8],\n",
-       " [-13, -18, -76, -44, 82, 31, -45, -87, 82, 99]]"
+       "[[-45, -100, -94, -50, -53, 95, -23, -95, 83, -15],\n",
+       " [-37, 49, 64, -31, -13, 58, -80, -71, 74, -16],\n",
+       " [-73, 41, -57, 64, -85, 28, -77, -55, 29, 44],\n",
+       " [-67, 91, -76, -32, -17, 71, -72, -1, 25, -22],\n",
+       " [58, 65, -5, 32, -10, 11, -60, -75, 96, -92],\n",
+       " [98, 98, -85, -1, -88, -42, -34, 39, -36, -68],\n",
+       " [-83, -29, 5, 16, 41, 63, -92, -12, -6, -30],\n",
+       " [-49, 91, 85, -39, 53, 77, 38, -9, 18, 91],\n",
+       " [1, -88, -84, -89, 89, 8, 84, 55, -47, -81],\n",
+       " [35, 34, 51, -7, 12, -27, -8, -11, 92, -40]]"
       ]
      },
      "execution_count": 24,
@@ -656,10 +704,7 @@
    "id": "8e9c3fc5-7125-47a5-a70e-ebc77af1be7f",
    "metadata": {},
    "source": [
-    "# <center> **FUNCIONES ASINCRONAS**</center>\n",
-    "<p align=\"center\" width=\"100%\">\n",
-    "    <img width=\"100%\" src=\"event-loop.png\">\n",
-    "</p>"
+    "# <center> **FUNCIONES ASINCRONAS**</center>"
    ]
   },
   {
@@ -723,13 +768,13 @@
     {
      "data": {
       "text/plain": [
-       "[[-92, -87, -3, -88, -51],\n",
-       " [70, 72, 62, 4, 2],\n",
-       " [-91, -33, -15, -97, -26],\n",
-       " [21, 85, 97, 55, 4],\n",
-       " [-44, -20, -28, -26, -55],\n",
-       " [20, 11, 62, 20, 25],\n",
-       " [-34, -80, -19, -44, -70]]"
+       "[[-30, -89, -71, -97, -88],\n",
+       " [87, 63, 51, 12, 32],\n",
+       " [-42, -94, -65, -29, -38],\n",
+       " [12, 22, 24, 80, 38],\n",
+       " [-96, -100, -33, -35, -52],\n",
+       " [33, 61, 98, 12, 45],\n",
+       " [-6, -82, -69, -51, -92]]"
       ]
      },
      "execution_count": 26,
@@ -810,26 +855,26 @@
      "output_type": "stream",
      "text": [
       "Inicio funcion Primero\n",
-      "Inicio funcion Primero\n",
-      "Comenzar funcion ultimo\n",
       "Comenzar funcion ultimo\n",
       "Inicio funcion Primero\n",
       "Comenzar funcion ultimo\n",
       "Inicio funcion Primero\n",
-      "Final funcion Primero\n",
-      "Final funcion Primero\n",
-      "Terminar funcion ultimo\n",
-      "Terminar funcion ultimo\n",
+      "Inicio funcion Primero\n",
+      "Comenzar funcion ultimo\n",
       "Final funcion Primero\n",
       "Terminar funcion ultimo\n",
       "Final funcion Primero\n",
-      "la tarea mas rapida obtuvo el resultado: [-68, -81, -97, -70, -2]\n",
-      "la siguiente tarea mas rapida obtuvo el resultado: [-66, -100, -48, -34, -73]\n",
-      "la siguiente tarea mas rapida obtuvo el resultado: [25, 92, 26, 45, 95]\n",
-      "la siguiente tarea mas rapida obtuvo el resultado: [44, 88, 83, 47, 90]\n",
-      "la siguiente tarea mas rapida obtuvo el resultado: [-83, -7, -89, -15, -48]\n",
-      "la siguiente tarea mas rapida obtuvo el resultado: [78, 44, 8, 54, 29]\n",
-      "la siguiente tarea mas rapida obtuvo el resultado: [-26, -31, -24, -39, -52]\n"
+      "Terminar funcion ultimo\n",
+      "Final funcion Primero\n",
+      "Final funcion Primero\n",
+      "Terminar funcion ultimo\n",
+      "la tarea mas rapida obtuvo el resultado: [-41, -91, -16, -20, -2]\n",
+      "la siguiente tarea mas rapida obtuvo el resultado: [26, 46, 65, 67, 23]\n",
+      "la siguiente tarea mas rapida obtuvo el resultado: [-10, -83, -87, -16, -4]\n",
+      "la siguiente tarea mas rapida obtuvo el resultado: [99, 63, 71, 78, 6]\n",
+      "la siguiente tarea mas rapida obtuvo el resultado: [-10, -57, -67, -12, -22]\n",
+      "la siguiente tarea mas rapida obtuvo el resultado: [-49, -91, -44, -75, -58]\n",
+      "la siguiente tarea mas rapida obtuvo el resultado: [61, 76, 50, 3, 23]\n"
      ]
     }
    ],
@@ -870,7 +915,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Task pending name='Task-28' coro=<Primero() running at /tmp/ipykernel_130/4294725927.py:1>>\n",
+      "<Task pending name='Task-28' coro=<Primero() running at /tmp/ipykernel_410/4294725927.py:1>>\n",
       "Inicio funcion Primero\n",
       "MAS PROCESOS!\n",
       "Final funcion Primero\n",
@@ -880,7 +925,7 @@
     {
      "data": {
       "text/plain": [
-       "<Task finished name='Task-28' coro=<Primero() done, defined at /tmp/ipykernel_130/4294725927.py:1> result=[-99, -55, -50, -47, -21]>"
+       "<Task finished name='Task-28' coro=<Primero() done, defined at /tmp/ipykernel_410/4294725927.py:1> result=[-88, -92, -82, -76, -4]>"
       ]
      },
      "execution_count": 29,
@@ -935,7 +980,7 @@
     {
      "data": {
       "text/plain": [
-       "b'\\x00\\x12\\xc4l\\x07(\\xb7\\xf1\\xa2\\xabh\\xaa\\x97\\xf0p\\x978S\\xc3\\r\\x15D!\\x86\\xd3\\x06q\\xd8\\xb65\\xc0%G\\xac\\x16R\\xee\\x98+f\\x8c\\xf9\\x08Fz*\\x12Z%\\x8d9Jw\\x86)\\x03w\\xac\\x83\\xdd\\xbb\\xfc\\x05\\xe8o\\xef\\xcd\\xd5\\xb7Ew\\xd7\\xf9A\\xaf\\xf9+\\xb2\\xbd\\x04\\xddn\\xda\\xd4\\xec?\\x0bWi\\xad^q\\xd3\\x7f\\x8f\\x1d[\\xeb\\xba\\xe6'"
+       "b',\\xe4\\x8d\\xce\\xa0\\x8a\\xcf\\x9b\\x18I\\r\\x89YCGN\\x01B7l\\xec\\xa2\\xbac\\xfc\\xdd\\x15q!\\xfd*\\x9b\\x13l\\xd7\\x07|\\x9c\\xb9kj\\xed\\x13\\x84\\xad\\n\\xe4px\\xaf\\x90nn\\xe6(\\\\\\xf6\\xbc\\xbd y\\x91k\\xa5Rf\\xeclK\\x92O\\x12\\xca\\xf2\\xfa\\xf8\\xab\\xefi\\xbf\\xb0\\xba\\xe3\\x1fkjv\\xa8v\\x9e\\xbb\\xee6J\\xae!7E\\x0e\\xd6\\xc0\\x81\\x06M&n\\xef\\x81\\xf5!\\x9c\\xd0\\xb8\\xcc\\xe9\\xbd\\xfde\\x8a\\xfa'"
       ]
      },
      "execution_count": 30,
@@ -949,18 +994,19 @@
     "# importa librerias para trabajar concurrencia\n",
     "from concurrent.futures import ThreadPoolExecutor\n",
     "\n",
-    "def blocking_io():\n",
+    "def blocking_io(value = 23, otros = 10):\n",
     "    # File operations (such as logging) can block the\n",
     "    # event loop: run them in a thread pool.\n",
     "    with open(\"/dev/urandom\", \"rb\") as f:\n",
-    "        return f.read(100)\n",
+    "        return f.read(value + otros)\n",
     "    \n",
     "async def asyncio_multi_hilo():\n",
     "    \n",
     "    loop = get_running_loop()\n",
     "    pool = ThreadPoolExecutor()\n",
     "    \n",
-    "    return await loop.run_in_executor(pool, blocking_io)\n",
+    "    # tipo de pool, funcion, parametros\n",
+    "    return await loop.run_in_executor(pool, blocking_io, 50, 70)\n",
     "\n",
     "await asyncio_multi_hilo()"
    ]
@@ -982,7 +1028,7 @@
     {
      "data": {
       "text/plain": [
-       "333333283333335000000"
+       "1494768086696569506"
       ]
      },
      "execution_count": 31,
@@ -993,11 +1039,11 @@
    "source": [
     "from concurrent.futures import ProcessPoolExecutor\n",
     "\n",
-    "def cpu_bound():\n",
+    "def cpu_bound(value = 23, otros = 10):\n",
     "    # CPU-bound operations will block the event loop:\n",
     "    # in general it is preferable to run them in a\n",
     "    # process pool.\n",
-    "    return sum(i * i for i in range(10 ** 7))\n",
+    "    return  sum(i * i for i in range(10 ** 7)) // (value + otros)\n",
     "\n",
     "    \n",
     "async def asyncio_multi_proceso():\n",
@@ -1005,18 +1051,11 @@
     "    loop = get_running_loop()\n",
     "    pool = ProcessPoolExecutor()\n",
     "    \n",
-    "    return await loop.run_in_executor(pool, cpu_bound)\n",
+    "    # tipo de pool, funcion, parametros\n",
+    "    return await loop.run_in_executor(pool, cpu_bound, 123, 100)\n",
     "\n",
     "await asyncio_multi_proceso()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1172a04b-7f73-4646-882e-f7595df21c93",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
