--- a/Python/Hilos_Procesos_Asincronismo/Hilos_Procesos_Asincronismo.ipynb
+++ b/Python/Hilos_Procesos_Asincronismo/Hilos_Procesos_Asincronismo.ipynb
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "id": "9db688e7-23fb-4abc-8fdd-77f9ff644238",
    "metadata": {
     "scrolled": true,
@@ -319,7 +319,7 @@
        "25"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
     {
      "data": {
       "text/plain": [
-       "[0, 4, 16, 36, 64, 100, 144, 256, 324, 196]"
+       "[0, 4, 16, 36, 64, 100, 144, 196, 256, 324]"
       ]
      },
      "execution_count": 15,
@@ -568,7 +568,8 @@
    "id": "d65b0999-b5f0-48f2-9830-53900b9a451c",
    "metadata": {},
    "source": [
-    "# <center> PROCESAMIENTO MASIVO</center>"
+    "# <center> PROCESAMIENTO MASIVO</center>\n",
+    "## <p> Lanzamiento de tareas paralelas, El módulo concurrent.futures provee una interfaz de alto nivel para ejecutar **invocables de forma asincrónica**. La ejecución asincrónica se puede realizar mediante hilos, usando ThreadPoolExecutor, o procesos independientes, mediante ProcessPoolExecutor. Ambos implementan la misma interfaz, que se encuentra definida por la clase abstracta Executor.</p>"
    ]
   },
   {
@@ -653,11 +654,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-42]\n",
-      "[-16, -11]\n",
-      "[-38, -36, -79]\n",
-      "[-8, -65, -63, -32]\n",
-      "[-100, -32, -74, -68, 15]\n"
+      "[-65]\n",
+      "[-58, -39]\n",
+      "[-78, -56, -76]\n",
+      "[-24, -39, -99, 4]\n",
+      "[-4, -33, -84, 5, -69]\n"
      ]
     }
    ],
@@ -689,11 +690,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-41]\n",
-      "[-85, -94]\n",
-      "[-1, -38, -28]\n",
-      "[-15, -98, -86, -3]\n",
-      "[-4, -80, -58, 3, -92]\n"
+      "[-50]\n",
+      "[-38, -74]\n",
+      "[-58, -23, -41]\n",
+      "[-46, -86, -27, -58]\n",
+      "[-23, -46, -85, -90, -70]\n"
      ]
     }
    ],
@@ -744,8 +745,9 @@
     "    tipo_ejecucion = tipo_instancia.get(tipo_tarea, ThreadPoolExecutor)\n",
     "    \n",
     "    # asigna los workers basado en el total de CPUs de la maquina\n",
-    "    pool = ThreadPoolExecutor()\n",
+    "    pool = tipo_ejecucion(max_workers=nucleos_totales)\n",
     "        \n",
+    "    # obtiene los resultados de cada argumento en la funcion  \n",
     "    response = pool.map(cuadrado, argumentos)\n",
     "        \n",
     "    # obtiene la respuesta de la tarea\n",
@@ -782,6 +784,35 @@
     "<p align=\"center\" width=\"100%\">\n",
     "    <img width=\"100%\" src=\"event-loop.png\">\n",
     "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c02dda9b-595f-403e-b6c0-f464435e51d4",
+   "metadata": {},
+   "source": [
+    "# <p> asyncio es una biblioteca para escribir código concurrente utilizando la sintaxis async/await.Es utilizado como base en múltiples frameworks asíncronos de Python y provee un alto rendimiento en redes y servidores web, bibliotecas de conexión de base de datos, colas de tareas distribuidas, etc. </p>\n",
+    "\n",
+    "- asyncio provee un conjunto de APIs de alto nivel para:\n",
+    "\n",
+    "- ejecutar corutinas de Python de manera concurrente y tener control total sobre su ejecución;\n",
+    "\n",
+    "- realizar redes E/S y comunicación entre procesos(IPC);\n",
+    "\n",
+    "- controlar subprocesos;\n",
+    "\n",
+    "- distribuir tareas a través de colas;\n",
+    "\n",
+    "- sincronizar código concurrente;\n",
+    "\n",
+    "\n",
+    "- Adicionalmente, existen APIs de bajo nivel para desarrolladores de bibliotecas y frameworks para:\n",
+    "\n",
+    "- crear y administrar bucles de eventos, los cuales proveen APIs asíncronas para redes, ejecutando subprocesos, gestionando señales del sistema operativo, etc;\n",
+    "\n",
+    "- implementar protocolos eficientes utilizando transportes;\n",
+    "\n",
+    "- Bibliotecas puente basadas en retrollamadas y código con sintaxis async/wait."
    ]
   },
   {
@@ -857,7 +888,7 @@
     {
      "data": {
       "text/plain": [
-       "<coroutine object listado at 0x7f29fc70d230>"
+       "<coroutine object listado at 0x7fb948649690>"
       ]
      },
      "execution_count": 27,
@@ -878,7 +909,7 @@
     {
      "data": {
       "text/plain": [
-       "<coroutine object listado at 0x7f29fc70d4d0>"
+       "<coroutine object listado at 0x7fb948649700>"
       ]
      },
      "execution_count": 28,
@@ -900,7 +931,7 @@
     {
      "data": {
       "text/plain": [
-       "[64, 28, -47, 25, 25, -64, 85, 1, 34, -70]"
+       "[-99, 10, 54, 81, -75, -71, -77, 87, 98, 80]"
       ]
      },
      "execution_count": 29,
@@ -921,7 +952,7 @@
     {
      "data": {
       "text/plain": [
-       "[12, -44, -58, -25, 94, -46, 1, 87, -18, -8]"
+       "[-89, -70, 19, 72, 64, 52, 14, 15, 90, -63]"
       ]
      },
      "execution_count": 30,
@@ -942,7 +973,7 @@
     {
      "data": {
       "text/plain": [
-       "[-55, -73, -79, 61, -68, -74, -4, -39, -27, 96, 74, -39, 62, 47, 52]"
+       "[65, -90, -60, -25, -37, 37, 6, -88, -58, -54, 15, -68, -86, 29, 67]"
       ]
      },
      "execution_count": 31,
@@ -964,7 +995,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[35, 2, -1, -39, -32, 48, -39, -29, -61, -24, 87, 39, 80, 86, 7, -48, -59, -93, 44, -20]\n"
+      "[22, -24, 85, -46, 86, -41, -82, -50, -63, -6, 41, -26, -2, -25, 93, -31, -77, -1, -25, 74]\n"
      ]
     }
    ],
@@ -981,16 +1012,16 @@
     {
      "data": {
       "text/plain": [
-       "[[65, -78, 49, -54, -80, 97, -89, 71, -57, 90],\n",
-       " [50, 44, -9, -6, 12, -29, 39, 88, -90, -48],\n",
-       " [32, 38, 32, -27, 22, 25, -40, -56, 8, 73],\n",
-       " [-16, 79, -96, 36, -36, 82, 35, 51, -45, 24],\n",
-       " [-8, 35, 73, -49, -94, -14, 85, 73, -8, -15],\n",
-       " [-87, 94, -4, 61, -53, -83, -90, -75, 95, 85],\n",
-       " [0, -50, -14, 6, 67, 84, 41, -44, 11, -93],\n",
-       " [-32, 74, -49, 83, 88, -25, 87, 88, 95, -5],\n",
-       " [63, 28, -72, 29, 38, 55, 55, -98, -71, -72],\n",
-       " [-37, 29, -63, -85, -18, -91, -82, 40, -35, 60]]"
+       "[[43, -40, 96, -62, 18, -19, -15, 27, -53, -64],\n",
+       " [-65, -36, 19, -90, 53, 64, -84, 34, 55, 20],\n",
+       " [18, 75, 50, -15, -57, -94, 51, 24, 37, -42],\n",
+       " [-3, -54, 74, -97, -54, 88, 36, -22, 13, 7],\n",
+       " [-26, 86, 0, -41, -26, 58, -81, 77, 0, 8],\n",
+       " [98, -68, -56, 21, -5, 55, 35, -68, -69, -29],\n",
+       " [55, -90, -54, 34, -48, 7, -49, 48, 13, -12],\n",
+       " [19, 76, -84, -16, -65, -54, -88, 39, 32, -64],\n",
+       " [21, -17, -75, 59, -74, 43, -85, 3, 13, 7],\n",
+       " [-19, -96, 18, -64, 25, -68, -41, 97, 60, -43]]"
       ]
      },
      "execution_count": 33,
@@ -1077,13 +1108,13 @@
     {
      "data": {
       "text/plain": [
-       "[[-47, -48, -10, -9, -62],\n",
-       " [59, 22, 34, 98, 18],\n",
-       " [-8, -19, -95, -58, -39],\n",
-       " [91, 65, 39, 39, 58],\n",
-       " [-53, -18, -32, -76, -100],\n",
-       " [23, 41, 79, 97, 63],\n",
-       " [-79, -95, -83, -77, -81]]"
+       "[[-68, -3, -98, -88, -84],\n",
+       " [54, 11, 36, 55, 42],\n",
+       " [-43, -30, -35, -23, -76],\n",
+       " [17, 23, 12, 65, 13],\n",
+       " [-68, -11, -73, -7, -95],\n",
+       " [83, 80, 28, 1, 79],\n",
+       " [-38, -19, -30, -100, -10]]"
       ]
      },
      "execution_count": 35,
@@ -1165,25 +1196,25 @@
      "text": [
       "Inicio funcion Primero\n",
       "Comenzar funcion ultimo\n",
+      "Comenzar funcion ultimo\n",
       "Inicio funcion Primero\n",
       "Inicio funcion Primero\n",
       "Inicio funcion Primero\n",
       "Comenzar funcion ultimo\n",
-      "Comenzar funcion ultimo\n",
-      "Final funcion Primero\n",
-      "Terminar funcion ultimo\n",
-      "Final funcion Primero\n",
-      "Final funcion Primero\n",
       "Final funcion Primero\n",
       "Terminar funcion ultimo\n",
       "Terminar funcion ultimo\n",
-      "la tarea mas rapida obtuvo el resultado: [-78, -98, -12, -56, -23]\n",
-      "la siguiente tarea mas rapida obtuvo el resultado: [96, 77, 18, 85, 1]\n",
-      "la siguiente tarea mas rapida obtuvo el resultado: [-14, -14, -97, -34, -77]\n",
-      "la siguiente tarea mas rapida obtuvo el resultado: [-50, -5, -34, -83, -67]\n",
-      "la siguiente tarea mas rapida obtuvo el resultado: [-31, -57, -91, -39, -46]\n",
-      "la siguiente tarea mas rapida obtuvo el resultado: [5, 51, 2, 69, 55]\n",
-      "la siguiente tarea mas rapida obtuvo el resultado: [13, 26, 61, 95, 91]\n"
+      "Final funcion Primero\n",
+      "Final funcion Primero\n",
+      "Final funcion Primero\n",
+      "Terminar funcion ultimo\n",
+      "la tarea mas rapida obtuvo el resultado: [-68, -18, -64, -41, -81]\n",
+      "la siguiente tarea mas rapida obtuvo el resultado: [27, 27, 83, 19, 64]\n",
+      "la siguiente tarea mas rapida obtuvo el resultado: [49, 29, 54, 35, 85]\n",
+      "la siguiente tarea mas rapida obtuvo el resultado: [-2, -72, -26, -96, -49]\n",
+      "la siguiente tarea mas rapida obtuvo el resultado: [-51, -4, -25, -3, -60]\n",
+      "la siguiente tarea mas rapida obtuvo el resultado: [-8, -84, -49, -7, -93]\n",
+      "la siguiente tarea mas rapida obtuvo el resultado: [35, 10, 65, 59, 34]\n"
      ]
     }
    ],
@@ -1224,7 +1255,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Task pending name='Task-28' coro=<Primero() running at /tmp/ipykernel_2533/4294725927.py:1>>\n",
+      "<Task pending name='Task-28' coro=<Primero() running at /tmp/ipykernel_2771/4294725927.py:1>>\n",
       "Inicio funcion Primero\n",
       "MAS PROCESOS!\n",
       "Final funcion Primero\n",
@@ -1234,7 +1265,7 @@
     {
      "data": {
       "text/plain": [
-       "<Task finished name='Task-28' coro=<Primero() done, defined at /tmp/ipykernel_2533/4294725927.py:1> result=[-72, -57, -84, -30, -69]>"
+       "<Task finished name='Task-28' coro=<Primero() done, defined at /tmp/ipykernel_2771/4294725927.py:1> result=[-52, -46, -47, -19, -42]>"
       ]
      },
      "execution_count": 38,
@@ -1277,7 +1308,7 @@
    "id": "80fa711b-61c5-4518-a0b0-1e7b862abb67",
    "metadata": {},
    "source": [
-    "## <center> **ASYNCIO - MULTI HILO**</center>"
+    "## <center> **ASYNCIO Event Loop - MULTI HILO**</center>"
    ]
   },
   {
@@ -1289,7 +1320,7 @@
     {
      "data": {
       "text/plain": [
-       "b'\\xbbI\\xcf\\x04I#\\xc04\\xc5\\xa0\\xc2\\xc9U\\x0b\\xfa\\xd1\\xab\\x83\\xfc\\x1a\\x02\\x81\\xf6}+\\x921G\\x15\\xa4^\\xfe\\xd4.F\\xd6\\xe8\\x172+oE>T\\x1bw\\x87\\x90m3\\xdeW\\x9e\\x81\\xe9\\xae\"\\x96\\xc6\\x17H\\x16e)#\\x19\\xff\\xd7w\\x12\\x12\\xc7\\x9d\\xa5\\xd6\\x1dqm\\xca\\x7f\\xd5LS_\\x1c\\x94\\\\q\\xcdq\\x95*3\\\\P4\\xb8\\xdf\\x82b\\x19\\xc7T\\xe1\\x0b\\xa3K\\xec\\x8a\\xa4\\xcb\\x14~(\\x93u\\xa7\\xe7B\\x06'"
+       "b\")\\x9f\\xec\\xe2-@\\x1fk\\xa2\\n\\x1d\\x82E\\xa7\\x92\\xaa\\xdf\\xec\\xdf\\x060B2\\x96\\xc1\\xaco{\\x9a\\x98k\\xc3\\xc9\\xf6e\\n\\xb0g\\xc3JYM\\x1fjg\\xa0[l\\xf2U\\xe6\\xf3O]\\x13d-\\xd7>\\xfed\\xeeL\\xc0\\x8cz\\x1f\\xbd\\xad\\xbcK\\x1b\\x8df\\xdeg\\xc2L\\xc6\\xf6'\\n)\\xa8\\xa9\\x16\\xe5\\xc9}\\xe8x\\xf5~\\xa2\\xf3\\xc2\\xb4J\\xd1#j\\xdbi\\x90\\xcb\\xd8\\xcb\\xd0g\\xc8\\x9ad7\\xbfur\\x0f\\x8a\\xd1\\xfe\""
       ]
      },
      "execution_count": 39,
