actualizados los ejemplos en el try

--- a/Python/type_isinstance_context_manager/type_isInstance_context_manager.ipynb
+++ b/Python/type_isinstance_context_manager/type_isInstance_context_manager.ipynb
@@ -197,13 +197,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Numeros object at 0x0000020D05177EB0> y <class '__main__.Numeros'> Son del Mismo Tipo\n",
-      "<__main__.Enteros object at 0x0000020D05176020> y <class '__main__.Numeros'> NO SON DEL MISMO TIPO\n",
-      "<__main__.Flotantes object at 0x0000020D05176290> y <class '__main__.Numeros'> NO SON DEL MISMO TIPO\n",
-      "<__main__.Fraccionarios object at 0x0000020D05174100> y <class '__main__.Numeros'> NO SON DEL MISMO TIPO\n",
-      "<__main__.Informacion object at 0x0000020D05176EC0> y <class '__main__.Numeros'> NO SON DEL MISMO TIPO\n",
-      "<__main__.Mezcla object at 0x0000020D05177E20> y <class '__main__.Numeros'> NO SON DEL MISMO TIPO\n",
-      "<__main__.Mezcla object at 0x0000020D05177E20> y <class '__main__.Informacion'> NO SON DEL MISMO TIPO\n"
+      "<__main__.Numeros object at 0x000001BF8DE97850> y <class '__main__.Numeros'> Son del Mismo Tipo\n",
+      "<__main__.Enteros object at 0x000001BF8DE94700> y <class '__main__.Numeros'> NO SON DEL MISMO TIPO\n",
+      "<__main__.Flotantes object at 0x000001BF8DE941F0> y <class '__main__.Numeros'> NO SON DEL MISMO TIPO\n",
+      "<__main__.Fraccionarios object at 0x000001BF8DE94160> y <class '__main__.Numeros'> NO SON DEL MISMO TIPO\n",
+      "<__main__.Informacion object at 0x000001BF8DE95B70> y <class '__main__.Numeros'> NO SON DEL MISMO TIPO\n",
+      "<__main__.Mezcla object at 0x000001BF8DE97400> y <class '__main__.Numeros'> NO SON DEL MISMO TIPO\n",
+      "<__main__.Mezcla object at 0x000001BF8DE97400> y <class '__main__.Informacion'> NO SON DEL MISMO TIPO\n"
      ]
     }
    ],
@@ -243,13 +243,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Numeros object at 0x0000020D05177EB0> es instancia de la clase <class '__main__.Numeros'>\n",
-      "<__main__.Enteros object at 0x0000020D05176020> es instancia de la clase <class '__main__.Numeros'>\n",
-      "<__main__.Flotantes object at 0x0000020D05176290> es instancia de la clase <class '__main__.Numeros'>\n",
-      "<__main__.Fraccionarios object at 0x0000020D05174100> es instancia de la clase <class '__main__.Numeros'>\n",
-      "<__main__.Informacion object at 0x0000020D05176EC0> NO es instancia de la clase <class '__main__.Numeros'>\n",
-      "<__main__.Mezcla object at 0x0000020D05177E20> es instancia de la clase <class '__main__.Numeros'>\n",
-      "<__main__.Mezcla object at 0x0000020D05177E20> es instancia de la clase <class '__main__.Informacion'>\n",
+      "<__main__.Numeros object at 0x000001BF8DE97850> es instancia de la clase <class '__main__.Numeros'>\n",
+      "<__main__.Enteros object at 0x000001BF8DE94700> es instancia de la clase <class '__main__.Numeros'>\n",
+      "<__main__.Flotantes object at 0x000001BF8DE941F0> es instancia de la clase <class '__main__.Numeros'>\n",
+      "<__main__.Fraccionarios object at 0x000001BF8DE94160> es instancia de la clase <class '__main__.Numeros'>\n",
+      "<__main__.Informacion object at 0x000001BF8DE95B70> NO es instancia de la clase <class '__main__.Numeros'>\n",
+      "<__main__.Mezcla object at 0x000001BF8DE97400> es instancia de la clase <class '__main__.Numeros'>\n",
+      "<__main__.Mezcla object at 0x000001BF8DE97400> es instancia de la clase <class '__main__.Informacion'>\n",
       "<class '__main__.Mezcla'> NO es instancia de la clase <class '__main__.Numeros'>\n",
       "<class '__main__.Mezcla'> NO es instancia de la clase <class '__main__.Informacion'>\n",
       "<class '__main__.Numeros'> NO es instancia de la clase <class '__main__.Numeros'>\n"
@@ -447,7 +447,7 @@
       "Finaliza el Contexto CON Excepcion CONTROLADA  <multiprocessing.pool.ThreadPool state=CLOSE pool_size=2>\n",
       "Excepcion Controlada, division by zero\n",
       "Excepcion Typo, <class 'ZeroDivisionError'>\n",
-      "<frame at 0x0000020D040E3790, file 'C:\\\\Users\\\\QiDimMak\\\\AppData\\\\Local\\\\Temp\\\\ipykernel_18460\\\\3943576886.py', line 36, code <cell line: 36>>\n",
+      "<frame at 0x000001BF8D086DD0, file 'C:\\\\Users\\\\QiDimMak\\\\AppData\\\\Local\\\\Temp\\\\ipykernel_10656\\\\3943576886.py', line 36, code <cell line: 36>>\n",
       "Valor FINALIZADO DESPUES del Contexto [0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
      ]
     }
@@ -511,9 +511,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-214676.12753\n",
-      "<function Timer.__enter__.<locals>.<lambda> at 0x0000020D0522C700>\n",
-      "1.5066879999940284\n"
+      "-215755.6415292\n",
+      "<function Timer.__enter__.<locals>.<lambda> at 0x000001BF8DF2DF30>\n",
+      "1.5122082000016235\n"
      ]
     }
    ],
@@ -585,22 +585,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "f23cd68a-1a7a-4072-bb2a-239f24bf1071",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "__enter__",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [14]\u001b[0m, in \u001b[0;36m<cell line: 10>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__exit__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39margs):\n\u001b[0;32m      7\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39miniciar_recurso \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m98\u001b[39m\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m sinContextManager() \u001b[38;5;28;01mas\u001b[39;00m datos:\n\u001b[0;32m     12\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mValor sin FINALIZAR el Contexto\u001b[39m\u001b[38;5;124m'\u001b[39m,datos)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: __enter__"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class sinContextManager:\n",
     "    \n",
@@ -634,28 +622,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "260212cb-5551-4c77-8dcb-2eee406f0362",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generando el objeto del contexto\n",
-      "no hubo excepcion\n",
-      "Inicia el contexto\n",
-      "Valor sin FINALIZAR el Contexto, HILOS <multiprocessing.pool.ThreadPool state=RUN pool_size=2>\n",
-      "Valor sin FINALIZAR el Contexto, RESULTADO [100, 121, 144, 169, 196, 225, 256, 289, 324, 361]\n",
-      "---- <multiprocessing.pool.ThreadPool state=RUN pool_size=2>\n",
-      "Cerrando los Recursos\n",
-      "Finalizando el contexto\n",
-      "[100, 121, 144, 169, 196, 225, 256, 289, 324, 361]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from contextlib import contextmanager\n",
     "\n",
@@ -704,42 +676,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "597b3cdf-dc22-4f2c-8d02-a64046ce8fdf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generando el objeto del contexto\n",
-      "Iniciando el contexto con valor  1\n",
-      "Generando el objeto del contexto\n",
-      "Iniciando el contexto con valor  2\n",
-      "Generando el objeto del contexto\n",
-      "Iniciando el contexto con valor  3\n",
-      "\n",
-      "resultado del contexto 1 ->  1\n",
-      "resultado del contexto 2 ->  8\n",
-      "resultado del contexto 3 ->  27\n",
-      "resultado del contexto 1 + 2 + 3 ->  36\n",
-      "\n",
-      "Cerrando los Recursos del contexto  3\n",
-      "Finalizando el contexto  3\n",
-      "\n",
-      "Cerrando los Recursos del contexto  2\n",
-      "Finalizando el contexto  2\n",
-      "\n",
-      "Cerrando los Recursos del contexto  1\n",
-      "Finalizando el contexto  1\n",
-      "\n",
-      "\n",
-      "valores fuera del contexto 1 ->  1\n",
-      "valores fuera del contexto 2 ->  8\n",
-      "valores fuera del contexto 3 ->  27\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def cubo(valor):\n",
     "    return valor **3\n",
@@ -887,10 +827,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "6ba8825d-1464-4dfb-bb92-da94ab203fa3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "__aenter__",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [14]\u001b[0m, in \u001b[0;36m<cell line: 17>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__exit__\u001b[39m(\u001b[38;5;28mself\u001b[39m, exc_type\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, exc_value\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, exc_tb\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m     14\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;241m22\u001b[39m\n\u001b[1;32m---> 17\u001b[0m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mwith\u001b[39;00m AdiministradorDeContextoAsincrono() \u001b[38;5;28;01mas\u001b[39;00m datos:\n\u001b[0;32m     19\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mValor sin FINALIZAR el Contexto Asincrono\u001b[39m\u001b[38;5;124m'\u001b[39m,datos)\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mValor FINALIZADO DESPUES del Contexto Asincrono\u001b[39m\u001b[38;5;124m'\u001b[39m,datos)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: __aenter__"
+     ]
+    }
+   ],
    "source": [
     "class AdiministradorDeContextoAsincrono:\n",
     "    \n",
@@ -917,10 +869,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "28fbd17e-b590-4eb6-b30f-c99b310f0055",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "__aexit__",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [15]\u001b[0m, in \u001b[0;36m<cell line: 17>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__exit__\u001b[39m(\u001b[38;5;28mself\u001b[39m, exc_type\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, exc_value\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, exc_tb\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m     14\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;241m22\u001b[39m\n\u001b[1;32m---> 17\u001b[0m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mwith\u001b[39;00m AdiministradorDeContextoAsincrono() \u001b[38;5;28;01mas\u001b[39;00m datos:\n\u001b[0;32m     19\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mValor sin FINALIZAR el Contexto Asincrono\u001b[39m\u001b[38;5;124m'\u001b[39m,datos)\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mValor FINALIZADO DESPUES del Contexto Asincrono\u001b[39m\u001b[38;5;124m'\u001b[39m,datos)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: __aexit__"
+     ]
+    }
+   ],
    "source": [
     "class AdiministradorDeContextoAsincrono:\n",
     "    \n",
@@ -963,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "9c252c43-5055-44da-a12b-463e06aa5d74",
    "metadata": {},
    "outputs": [
@@ -976,6 +940,9 @@
       "iniciando el contexto [961]\n",
       "Valor sin manipular el valor del Contexto Asincrono [961]\n",
       "Valor sin FINALIZAR el Contexto Asincrono [961, 23]\n",
+      "Cerrando los Recursos del contexto  31\n",
+      "Finalizando el contexto  31\n",
+      "\n",
       "Valor FINALIZADO DESPUES del Contexto Asincrono [961, 23]\n"
      ]
     }
@@ -1006,7 +973,9 @@
     "        await asyncio.sleep(0)        \n",
     "        \n",
     "    finally:\n",
-    "        await cuadrado(valor // 2)\n",
+    "        print('Cerrando los Recursos del contexto ',valor)\n",
+    "        print('Finalizando el contexto ',valor)\n",
+    "        print()\n",
     "        mensaje()\n",
     "\n",
     "# llamar un decorador administrador de contexto asincrono \n",
@@ -1029,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "d49d784d-5323-4c15-a759-8d3446bf9223",
    "metadata": {},
    "outputs": [
@@ -1051,6 +1020,15 @@
       "resultado del contexto 2 ->  [4]\n",
       "resultado del contexto 3 ->  [9]\n",
       "resultado del contexto 1 + 2 + 3 ->  [1, 4, 9]\n",
+      "\n",
+      "Cerrando los Recursos del contexto  3\n",
+      "Finalizando el contexto  3\n",
+      "\n",
+      "Cerrando los Recursos del contexto  2\n",
+      "Finalizando el contexto  2\n",
+      "\n",
+      "Cerrando los Recursos del contexto  1\n",
+      "Finalizando el contexto  1\n",
       "\n",
       "\n",
       "valores fuera del contexto 1 ->  [1]\n",
@@ -1085,8 +1063,9 @@
     "        await asyncio.sleep(0)        \n",
     "        \n",
     "    finally:\n",
-    "        await cuadrado(valor // 2)\n",
-    "        mensaje()\n",
+    "        print('Cerrando los Recursos del contexto ',valor)\n",
+    "        print('Finalizando el contexto ',valor)\n",
+    "        print()\n",
     "\n",
     "\n",
     "# crear una administrador de contexto asincrono con multiples llamados simultaneos\n",
@@ -1115,10 +1094,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "7ebd4b22-f37a-4bf9-b43a-98f983e8cd1a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "__aenter__",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [18]\u001b[0m, in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01myield\u001b[39;00m valor\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mawait\u001b[39;00m asyncio\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mwith\u001b[39;00m funcion_asincrona(\u001b[38;5;241m31\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m valor:\n\u001b[0;32m      8\u001b[0m      \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mValor sin FINALIZAR el Contexto Asincrono\u001b[39m\u001b[38;5;124m'\u001b[39m, valor)\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mValor FINALIZADO DESPUES del Contexto Asincrono\u001b[39m\u001b[38;5;124m'\u001b[39m,valor)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: __aenter__"
+     ]
+    }
+   ],
    "source": [
     "async def funcion_asincrona(valor):\n",
     "\n",
